Bug 45562 - Writer FORMATTING: drawing objects over text with borders appears wrong (regression after 3.3.4)
Summary: Writer FORMATTING: drawing objects over text with borders appears wrong (regr...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.3 release
Hardware: Other All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: BSA target:3.6.0 target:3.5.3
Keywords: regression
Depends on:
Blocks: 44768
  Show dependency treegraph
 
Reported: 2012-02-02 12:02 UTC by Denis Dobbin
Modified: 2012-04-26 08:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
a screenshot showing the current behavior (16.63 KB, image/png)
2012-02-02 12:02 UTC, Denis Dobbin
Details
bugdoc for border line painting/stacking order (11.56 KB, application/vnd.oasis.opendocument.text)
2012-03-23 09:52 UTC, Michael Stahl
Details
another bugdoc, with frames (13.87 KB, application/vnd.oasis.opendocument.text)
2012-04-04 13:28 UTC, Michael Stahl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Denis Dobbin 2012-02-02 12:02:54 UTC
Created attachment 56555 [details]
a screenshot showing the current behavior

Problem description: 
LibO Writer 3.4.5 don't take pictures and objects over borders on formated paragraph, using "send to background" option.

Steps to reproduce:
1. Format a paragraph with borders
2. insert an object (rectangle f.ex.) over formated paragraph
3. set the object's "send to background" option

Current behavior:
the object is take under the text but not the borders.

Expected behavior:
the object taking under the text and under the borders.

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Windows NT 6.1; rv:9.0.1) Gecko/20100101 Firefox/9.0.1
Comment 1 sasha.libreoffice 2012-03-16 05:12:05 UTC
Thanks for bugreport
Reproduced in 3.5.1 on Fedora 64 bit
but not reproduced in 3.3.4, therefore regression since 3.3.4
Comment 2 Michael Stahl 2012-03-23 09:45:57 UTC
this is also a consequence of drawing the borders too early and
very similar to the disappearing table borders
(except that those were hidden by subsidiary lines).
Comment 4 Michael Stahl 2012-03-23 09:52:55 UTC
Created attachment 58944 [details]
bugdoc for border line painting/stacking order

what i used for testing, should look like it did in OOo 3.4 beta
Comment 5 sasha.libreoffice 2012-03-23 22:45:52 UTC
Thanks for fixing
Comment 6 Michael Stahl 2012-04-04 13:28:12 UTC
Created attachment 59490 [details]
another bugdoc, with frames

this is based on Cedric's frame-to-back.odt,
enhanced to test both heavenly and hellish frames.
Comment 7 Not Assigned 2012-04-05 03:41:07 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5913506b2193e93ca2767ab7365ab2e76ed7848f

fdo#45562: paint borders in SwFlyFrm::Paint:
Comment 8 Not Assigned 2012-04-20 06:20:52 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e3cd3c72b20e4e0918e86edf5c9e3c9bd00ae9e3&g=libreoffice-3-5

fdo#45562: paint borders in SwFlyFrm::Paint:


It will be available in LibreOffice 3.5.4.
Comment 9 Not Assigned 2012-04-24 04:44:56 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=32b854ee4a63da1be42294c5afe6c62e54ae72d3&g=libreoffice-3-5-3

fdo#45562: paint borders in SwFlyFrm::Paint:


It will be available already in LibreOffice 3.5.3.